Fixed issues with improper navitem alignment

--- a/src/style.scss
+++ b/src/style.scss
@@ -63,7 +63,7 @@ body {
   width: 113px;
   height: 33px;
   right: 50px;
-  top: 25px;
+  top: 11px;
 
   //border: 2px solid #42EEF8;
   box-sizing: border-box;
@@ -85,7 +85,7 @@ body {
   width: 80px;
   height: 29px;
   right: 181px;
-  top: 25px;
+  top: 11px;
   border: 0px solid #42EEF8;
   font-size: 16px;
   font-weight: 640;
@@ -143,7 +143,7 @@ body {
   width: 70px;
   height: 29px;
   right: 292px;
-  top: 25px;
+  top: 11px;
   border: 0px solid #42EEF8;
   font-size: 16px;
   font-weight: 640;
@@ -154,7 +154,7 @@ body {
   width: 115px;
   height: 29px;
   right: 425px;
-  top: 22px;
+  top: 8px;
   border: 0px solid #42EEF8;
   font-size: 16px;
   font-weight: 640;
